--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,7 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 16px;
-  background-color: #fff;
+  color: #fff;
 }
 #root {
   width: 100%;
@@ -56,7 +55,6 @@ ul {
 
 img {
   display: block;
-
   width: 100%;
   height: auto;
 }
